[package]
name = "voprf-fastly"
version = "0.1.0"
authors = ["Martin Thomson <mt@lowentropy.net"]
edition = "2021"
publish = false

[[bin]]
name = "voprf-fastly"
path = "src/server.rs"

[[bin]]
name = "voprf-client"
path = "src/client.rs"
required-features = ["client"]

[features]
default = ["client"]
client = ["reqwest"]

[profile.release]
debug = 1

[dependencies]
fastly = "0.9"
rand = "0.8"
reqwest = { version = "0.12", optional = true, features = ["blocking"] }
thiserror = "1.0"
typenum = "1.17"
voprf = { version = "0.5", features = ["std"] }
